commited on 21july2022 - tried to resolve the problem with unauthorized right shift of the header up to 8px. the problem still persists. now a applied the left margin -8px instead of transition to the left of 8px.

--- a/style.css
+++ b/style.css
@@ -150,8 +150,9 @@ wrapper {
 .container {
    overflow: hidden;
    width: 100%;
-   min-height: 100%;
    max-width: 1440px;
+   min-height: 100%;
+   /* max-width: 1440px; */
    display: flex;
    flex-direction: column;
    margin: 0 auto;
@@ -159,9 +160,10 @@ wrapper {
 }
 
 .firstScreen {
-   min-width: 100%;
+   width: 100%;
+   /* min-width: 100%; */
    display: flex;
-   max-width: 100%;
+   /* max-width: 100%; */
    max-height: 1086px;
    height: 1086px;
    background: linear-gradient(-45deg,  rgba(16, 115, 87, 1),  rgba(26, 61, 114, 1), rgba(9, 52, 66, 1));
@@ -365,15 +367,15 @@ wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
-   align-items: ce;
+   /* align-items: center; */
    font-family: 'Fredoka-SemiBold';
    position: fixed;
    top: 0;
-   left: 0; /* calc((100vw - 100%) / 2); */
+   right: 100vw; /* calc((100vw - 100%) / 2); */
    z-index: 15;
    background: linear-gradient(-45deg,  /* rgba(16, 115, 87, 1), */  rgba(26, 61, 114, 1) 13%, rgba(9, 52, 66, 1));
-   transform: translateX(-8px);
-   
+   /* transform: translateX(-8px); */
+   margin-left: -8px;
    
 }
 
